--- a/index.html
+++ b/index.html
@@ -310,12 +310,14 @@ if (currentCount + students.length > 4) {
       if (b.podId === podId && b.time === time && b.students.includes(sid)) {
         ruleViolationCount++; // Count violation
         errorsDiv.textContent = `Student ${sid} is already booked in this pod at this time.`;
+        renderInsights(); // ← Update the UI
         return;
       }
 
       if (b.time === time && b.podId !== podId && b.students.includes(sid)) {
         ruleViolationCount++; // Count violation
         errorsDiv.textContent = `Student ${sid} is already booked in another pod at this time.`;
+        renderInsights(); // ← Update the UI
         return;
       }
     }
